css/style.css
body {
    height: 100vh;
    width: 100vw;
}

h1 {
  font-size: 36px;
  margin-top: 20px;
  margin-bottom: 10px;
}

h2 {
  font-size: 30px;
  margin-top: 20px;
  margin-bottom: 10px;
}

h3 {
  font-size: 24px;
  margin-top: 20px;
  margin-bottom: 10px;
}

h4 {
  font-size: 24px;
  margin-top: 10px;
  margin-bottom: 10px;
}

#navbar {
  background: rgb(219, 10, 91);
  min-height: 60px;
  padding: 6.5px 0;
}
#navbar ul {
    color: #6a6969;
}

.container-fluid {
  padding: 0 3%;
}

#nabar>li {
    list-style-type: none;
    font-family: 'Roboto', sans-serif;
    color: #515151;
    display: inline-block;
}

#navbar li a {
    color: #ffffff;
    font-size: 1em;
    text-decoration: none;
    border: 1px solid #ffffff;
    border-radius: 25px;
    text-align: center;
    padding: 8px;
    margin: 5px;
}

#navbar li a:hover {
    color: #d42551;
    text-decoration: none;
    background: #eee;
}

.nav>li>a:focus {
  background: transparent;
}

.cart {
  font-size: 20px;
  padding: none;
}

#welcome-image{
  background: linear-gradient(rgba(0,0,0,.15),rgba(0,0,0,.15)),url('../assets/images/macaron-work.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

#shop-image {
  background: linear-gradient(rgba(0,0,0,.15),rgba(0,0,0,.15)),url('../assets/images/macaron-work-3.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

#gifts-image {
  background: linear-gradient(rgba(0,0,0,.15),rgba(0,0,0,.15)),url('../assets/images/macaron-gifts.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

#contact-image {
  background: linear-gradient(rgba(0,0,0,.15),rgba(0,0,0,.15)),url('../assets/images/macaron-contact.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

#cart-image {
  background: linear-gradient(rgba(0,0,0,.15),rgba(0,0,0,.15)),url('../assets/images/macaron-cart.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

.header-text {
  border: 3px solid #ffffff;
  padding: 5px;
  height: 100px;
  width: 50%;
  text-align: center;
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}

.header-text h1 {
  vertical-align: middle;
  margin: auto;
  font-weight: 800;
  font-size: 5em;
  color: #ffffff;
}

#home-page {
  height: 75%;
  padding: 0 !important;
}

#main-container {
    margin-top: 1%;
    margin-bottom: 1%;
    height: 75%;
}

#main-container h3 {
  margin-top: 20px;
  margin-bottom: 10px;
}

.header-image {
    width: 100%;
    height: 100%;
    max-height: 700px;
}

.left-home,
.right-home {
  height: 100%;
}

.left-box {
  height: 35%;
  margin-top: 7%;
}

.right-card {
  padding: 5%;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  height: 80%;
  wdiht: 75%;
  background: url('../assets/images/m-dozen.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  color: #ffffff;
  text-align: center;
}

.right-card h2 {
  margin: 0;
}

.top-box {
  background: rgb(245, 171, 53);
}

.bottom-box {
  background: rgb(197, 239, 247);
}

.bottom-box h2 {
  margin-top: 8px;
  margin-bottom: 0;
}

.table>thead>tr>th {
  border-color: #000000;
}

.price-dispay {
  height: 90px;
  width: 90px;
  border-radius: 50%;
}

.discount {
  background: rgb(245, 171, 53);
  position: relative;
  top: 20%;
  left: 50%;
  transform: translate(-50%,-20%);
}

.price {
  background: rgb(197, 239, 247);
  position: absolute;
  top: 2%;
  right: 2%;
}

.discount h3,
.price h3 {
  padding: 1.1em 0;
  margin: 0;
  text-align: center;
}

.order-button {
  height: 30px;
  width: 90px;
  padding: 5px 0;
  position: absolute;
  bottom: 1%;
  left: 50%;
  transform: translateX(-50%);
  border: 1px solid rgb(245, 171, 53);
  border-radius: 25px;
  text-align: center;
}

#main-container h3 {
    font-size: 20px;
    color: #6a6969;
    padding-bottom: 1%;
}

#main-container p {
    font-size: 14px;
    color: #6a6969;
}

#main-body-paragraph {
    border-top: 3px solid #000000;
}

#flavor-of-day {
  height: 30%;
}

.dates {
  height: 100%;
  text-align: center;
  font-weight: 600;
}

.dates h4,
.dates h3 {
  margin: 0;
}

.dates h3 {
  margin-top: 10%;
  vertical-align: bottom;
}

.flavors {
  border-radius: 50%;
  height: 60%;
  position: relative;
}

/*Our Macarons*/
#macarons-shop {
  height: 250%;
  padding: 2% 5%;;
}

.shop-header {
  text-align: center;
}

.shop-container {
  height: 55%;
  padding: none;
  border-top: 3px solid #000000
}

.macaron-container {
  height: 40%;
  padding-top: 2%;
}

.macaron-container {
  text-align: center;
}

.macaron-container > .price > h3 {
  padding: .8em 0
}

.display-count {
  height: 100%;
}

.shop-image {
  height: 200px;
  width: 200px;
  border-radius: 50%;
}

.button-macaron {
  height: 100%;
  font-size: 1em;
}

.button-macaron:focus {
  outline: none !important;
}

.add-cart,
.cart-controls {
  height: 13%;
  border-radius: 25px;
  font-weight: 600;
  font-size: 1.4em;
}

.display-count,
.add-cart {
  padding: .5em 0;
}

.cart-controls,
.add-cart,
.button-macaron {
  background: rgb(246, 36, 89);
  color: #ffffff;
}

#macarons-shop p,
#gifts p {
  font-size: 14px;
  color: #6a6969;
}

#macarons-shop h3,
#gifts h3 {
  font-size: 20px;
  color: #6a6969;
  margin: 10px 0;
}

#second-paragraph {
    padding-top: 15%;
    position:relative;
}

/*gifts*/
#gifts {
  height: 240%;
}

#gifts a {
  text-decoration: none;
  color: #df5277
}

.gift-container {
  border-top: 3px solid #000000;
  height: 45%;
}

.gift-container .display-count,
.gift-container .add-cart {
  padding: .3em 0;
}

.gift-container>.macaron-container {
  margin-top: 3%;
}

.catering-container {
  height: 40%;
  border-top: 3px solid #000000;
}

.catering-left,
.catering-right {
  height: 100%;
}

.catering-top,
.catering-bottom {
  margin-top: 5%;
  height: 38%;
}

.catering-box-right {
  height: 80%;
  margin-top: 5%;
  background: url('../assets/images/tower.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

.catering-top {
  background: url('../assets/images/wedding.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

.catering-bottom {
  background: url('../assets/images/decorative.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

/*Order Page*/

#order-image {
    width: 100%;
    height: 40%;
}

#order_page {
    height: 50%;
    width: 100%;
}

.sidebar,
.main_list {
    height: 100%;
    border:1px solid black;
}

.main_list {
    padding: 0;
    overflow: hidden;
    overflow-y: scroll;
}

.list_item {
    height: 20%;
    width: 100%;
    border: 1px solid black;
    list-style-type: none;
}

/*Contacts*/
#contacts h3 {
    font-size: 20px;
    color: #6a6969;
    margin: 40px 0;
}

#contacts p {
    font-size: 14px;
    color: #6a6969;
}

#contacts li {
    margin-left: -4%;
    font-size: 14px;
    color: #6a6969;
    list-style-type: none;
}

#contacts a {
    text-decoration: none;
    color: #df5277;
}

#contacts {
    position: relative;
}

#contacts div {
    display: inline-block;
}

#days-address,
#contact-form {
    position: relative;
}

#macaron-image {
    padding: 8% 5% 5% 5%;
}

#macaron-image img {
    height: 340px;
    width: 210px;
}


#days-address h3,
#days-address p,
#days-address a {
    margin-left: 8%;
    margin-bottom: 13%;
}

#contacts form {
    font-size: 14px;
    color: #6a6969;
}

#contacts form input {
    height: 35px;
    width: 310px;
    background-color: #f5f5f5;
    margin-bottom: 3%;
}

#message {
    height: 70px;
    vertical-align: top;
}

#button {
    width: 155px !important;
    height: 35px !important;
    background-color: #f5f5f5;
    color: #6a6969;
    font-size: 16px;
    margin-left: 155px;
}

/*Footer*/

footer {
     height: 10%;
     width: 100%;
     background-color: #212121;
     color: #ffffff;
     text-align: center;
     display: inline-block;
}

footer li {
  height: 30px;
  width: 30px;
  border-radius: 50%;
  background: #ffffff;
  position: relative;
  color:#000000;
  font-size: 20px;
  text-align: center;
  padding: 5px;
  display: inline-block;
}

.copyright {
  vertical-align: bottom;
  text-align: center;
}

 @media screen and (max-width: 627px) {
     nav img {
         position: relative;
         top: 20%;
         left: 30%;
     }

     nav ul {
         position: relative;
         left: 7%;
         top: -10%;
         padding: 0;
         margin: 0;
         box-sizing: border-box;
     }

     nav li {
         display: inline-block;
         font-size: .7em;
         color: #515151;
         list-style-type: none;
         padding: 0 10% 0 0;
     }

     nav li:hover {
         color: #d42551;
     }

     footer {
         height: 20vh;
     }

 }

